syntax = "proto3";

package domain.batch.v1;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

import "domain/batch/v1/batch.proto";

message Batch {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  Orders orders = 6;
}
